# member-contracts

./: .example.env  .gitignore  .localterra.env  .testnet.env  Cargo.toml  LICENSE  README.md  config.terrain.json  keys.terrain.template.js  package-lock.json  package.json  refs.json  refs.terrain.json  terrarium.template.json
.cargo/: config
.github/workflows/: contracts.yaml
contracts/cw-distribution/: Cargo.toml
contracts/cw-distribution/examples/: schema.rs
contracts/cw-distribution/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/cw-friend/: Cargo.toml
contracts/cw-friend/examples/: schema.rs
contracts/cw-friend/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  state.rs
contracts/cw-member/: Cargo.toml
contracts/cw-member/examples/: schema.rs
contracts/cw-member/src/: contract.rs  state.rs
contracts/cw-member/tests/: helpers.rs
contracts/cw-membership/: Cargo.toml
contracts/cw-membership/examples/: schema.rs
contracts/cw-membership/src/: contract.rs  error.rs  state.rs
contracts/cw-membership/tests/: helpers.rs
contracts/cw-thread/: Cargo.toml
contracts/cw-thread/examples/: schema.rs
contracts/cw-thread/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  state.rs
contracts/cw-thread/src/execute/: config.rs  key.rs  mod.rs  qa.rs  thread.rs  user.rs  user_config.rs
contracts/cw-thread/src/query/: config.rs  key.rs  key_holder.rs  mod.rs  qa.rs  thread.rs  user.rs  user_config.rs  user_holding.rs
contracts/cw-thread/src/util/: fee_share.rs  member.rs  membership.rs  mod.rs  price.rs  user.rs
contracts/cw-thread/tests/: helpers.rs  mod.rs  test_2_users_buy_and_sell_key.rs  test_buy_and_sell_key.rs  test_buy_key_happy_case.rs  test_buy_key_insufficient_funds.rs  test_query_cost_to_buy_key.rs  test_registration_admin_can_register_key_on_behalf_of_user.rs  test_sell_key_cannot_sell_last_key.rs  test_sell_key_insufficient_funds.rs  test_user_can_register_itself.rs  test_user_cannot_register_key_by_itself.rs
contracts/cw-thread/tests/key/: mod.rs  test_2_users_buy_and_sell_key.rs  test_buy_and_sell_key.rs  test_buy_key_happy_case.rs  test_buy_key_insufficient_funds.rs  test_query_cost_to_buy_key.rs  test_sell_key_cannot_sell_last_key.rs  test_sell_key_insufficient_funds.rs
contracts/cw-thread/tests/registration_admin/: mod.rs  test_registration_admin_can_register_key_on_behalf_of_user.rs
contracts/cw-thread/tests/user/: mod.rs  test_user_can_register_itself.rs  test_user_cannot_register_key_by_itself.rs
contracts/distribution/: Cargo.toml
contracts/distribution/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/funds-distributor/: Cargo.toml
contracts/member/: Cargo.toml
contracts/member/examples/: schema.rs
contracts/member/src/: contract.rs  state.rs
contracts/thread/: Cargo.toml
tasks/: build_and_optimize.ts  const.ts  deploy.ts  deploy_warp.ts  env.ts  init_distribution.ts  init_member.ts  init_thread.ts  store_code.ts  store_code_and_instantiate.ts  store_code_and_instantiate2.ts  update_member_config.ts  util.ts
(+121 files in other folders)
