[workspace]
members = ["contracts/*", "packages/*"]
exclude = []

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow            = "1.0.71"
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
base64 = "0.21.3"
cw-asset = "3.0.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw721 = "0.18.0"
schemars = "0.8"
thiserror = "1"
serde-json-wasm = "1.0.0"
json-codec-wasm = "0.1.0"
serde = { version = "1", default-features = false, features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.2"
prost = "0.12.0"
