[package]
name = "cw-thread"
version = "0.1.0"
authors = ["luc", "boc"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "${process.cwd()}":/code \
  -v "${path.join(process.cwd(), "../../", "packages")}":/packages \
  --mount type=volume,source="${contract}_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer${process.env.TERRARIUM_ARCH_ARM64 ? "-arm64" : ""}:0.12.6
"""

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "1"
cw2 = "1.1.0"
cw-utils = "1.0.1"
thiserror = "1.0.49"

thread = { path = "../../packages/thread", default-features = false, version = "*" }
member = { path = "../../packages/member", default-features = false, version = "*" }
distribution = { path = "../../packages/distribution", default-features = false, version = "*" }
shared = { path = "../../packages/shared", default-features = false, version = "*" }

[dev-dependencies]
cw-multi-test = "0.16.5"
